# dotfiles

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .stowrc  LICENSE  README.md  dot-bash_logout  dot-bash_profile  dot-bashrc  dot-bashrc.local  dot-inputrc  etc-sddm.conf  etc-ssh-sshd_config.d-00_listen.conf  flake.nix  home.nix  install  pyproject.toml  setup.sh  tmux.conf  tmux.conf.bak6153  tmux.conf.bak9443  tmux.conf.nix
.github/instructions/: ai-generated-edits.instructions.md
direnv/lib/: hm-nix-direnv.sh
dot-aws/: .gitignore  config
dot-config/: .gitignore  whkdrc
dot-config/GIMP/: .gitignore
dot-config/alacritty/: alacritty.toml
dot-config/bashrc.d/: direnv  fzf  go  shopt
dot-config/direnv/: direnvrc
dot-config/dunst/: dunstrc
dot-config/emacs/: .gitignore  custom.el  init.el  settings.org
dot-config/foot/: foot.ini
dot-config/git/: boehringer-ingelheim.inc  config  ignore
dot-config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  mocha.conf
dot-config/kitty/: diff.conf  gruvbox.conf  kitty.conf
dot-config/komorebi/: komorebi.bar.json  komorebi.json
dot-config/lazyvim/: lazy-lock.json
dot-config/nvim/: init.lua  lazy-lock.json
dot-config/nvim-default/: init.lua
dot-config/oh-my-posh/: serverhorror.omp.yaml  serverhorror.omp.yaml.bak
dot-config/rofi/: config.rasi
dot-ssh/: config
dot-vscode/: argv.json
nvim/: README.md  init.lua  lazy-lock.json
scripts/: Start-DevBox.ps1  devbox.ps1  ibbsddc-devbox.ps1  myscript.ps1  pames-devbox.ps1  play-devbox.ps1  techtrain-devbox.ps1
tmux/: tmux.conf
(+91 files in other folders)
