[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "serverhorror",email = "serverhorror@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
